--- a/app/deployments/api.yaml
+++ b/app/deployments/api.yaml
@@ -19,3 +19,16 @@ spec:
           image: nginx:1.6
           ports:
             - containerPort: 8080
+
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: nginx-service
+spec:
+  selector:
+    app: nginx
+  ports:
+    - protocol: TCP
+      port: 80
+      targetPort: 8080
